crates/reinhardt-pages/tests/ui/loader/fail/non_result.rs
use reinhardt_pages::loader;

#[loader]
async fn not_result() -> u8 {
	1
}

fn main() {}
